syntax = "proto3";

package ai.lzy.v1.workflow;

option java_outer_classname = "LWS";
option java_package = "ai.lzy.v1.workflow";

import "ai/lzy/v1/workflow/workflow.proto";

service LzyWorkflowService {
  rpc CreateWorkflow (CreateWorkflowRequest) returns (CreateWorkflowResponse);
  rpc AttachWorkflow (AttachWorkflowRequest) returns (AttachWorkflowResponse);
  rpc FinishWorkflow (FinishWorkflowRequest) returns (FinishWorkflowResponse);
  rpc DeleteWorkflow (DeleteWorkflowRequest) returns (DeleteWorkflowResponse);
}

message CreateWorkflowRequest {
  string workflowName = 1;

  // if not set then internal SnapshotStorage is created
  /* optional */ SnapshotStorage snapshotStorage = 2;
}

message CreateWorkflowResponse {
  string executionId = 1;
  /* optional */ SnapshotStorage internalSnapshotStorage = 2;
}

message AttachWorkflowRequest {
  string workflowName = 1;
  string executionId = 2;
}

message AttachWorkflowResponse {
}

message FinishWorkflowRequest {
  string workflowName = 1;
  string executionId = 2;
  string reason = 3;
}

message FinishWorkflowResponse {
}

message DeleteWorkflowRequest {
  string workflowName = 1;
}

message DeleteWorkflowResponse {
}
